# VanillaBenchmark

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  frangi_filter_segmentation.m  wrapper_frangi_filtering.m
complementary_scripts/Evaluation_Benchmarks/: integral.ipynb  testBG.ipynb  testCSO.ipynb  testOrgan.ipynb
complementary_scripts/Init_scripts/: 8bits.ipynb  transform_images.ipynb
include/: FrangiFilter.h
src/Filters/: FrangiFilter.cpp  main.cpp
src/benchmark/: benchmark.cpp
